; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_pushnumber.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_pushnumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { double }

@JS_TNUMBER = common dso_local global i32 0, align 4
@STACK = common dso_local global %struct.TYPE_4__* null, align 8
@TOP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @js_pushnumber(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %5 = call i32 @CHECKSTACK(i32 1)
  %6 = load i32, i32* @JS_TNUMBER, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @STACK, align 8
  %8 = load i64, i64* @TOP, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  store i32 %6, i32* %10, align 8
  %11 = load double, double* %4, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @STACK, align 8
  %13 = load i64, i64* @TOP, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store double %11, double* %16, align 8
  %17 = load i64, i64* @TOP, align 8
  %18 = add i64 %17, 1
  store i64 %18, i64* @TOP, align 8
  ret void
}

declare dso_local i32 @CHECKSTACK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
